            Fix NRF.requestDevice regression (clearInterval error) (fix #1669)
            Smartibot devices now advertise on BLE as 'Smartibot abcd'
            nRF5x: Leave digital input disconnected for analog read (saves power)
            nRF5x: Return 'analog' as pin mode for any pin where input is disconnected
            
     2v03 : nRF5x: Fix issue when calling NRF.setAdvertising while connected via BLE (fix #1659)
            nRF5x: 'dump()' not outputs `NRF.setSecurity` line if it has been called.
            Ensure that converting a valid pin to a boolean always returns true
            clearInterval/clearTimeout/clearWatch(undefined) now throw an error asking for just clearX()
              - this stops code accidentally clearing all timers/etc if it uses a variable that is undefined
            Allow NRF.setAddress to work even with services defined and a connection in progress

     2v02 : Fix string index calculation when using some regexes (fix #1602)
            Ensure Function.replaceWith puts scope after parameters (fix #1601)
            Ensure Graphics.* return the Graphics instance, to allow call chaining (fix #1580)
            Ensure DataView.byteOffset/byteLength is always set even if not specified (fix #1567)
            Added HttpServerResponse.setHeader
            HttpServerResponse now automatically sends `Connection:close` unless overridden (fix #1596)
            Fix sign of RSSI reporting with setRSSIHandler
            nRF52: Add docs for properties that weren't documented before
            nRF52: Add ability to connect to device with passkey authentication
            nRF52: Allow startNotifications to use Indicate if Notify doesn't exist (as per spec)
            nRF52: Add option for static passkey pairing with NRF.setSecurity
	    ESP32: update EspruinoBuildTools to esp-idf V3.1.2 - fix Wifi connect issues (multiple ssid)
            Revert PR #1459 as it broke neopixel functionality that worked previously