@@ -5,7 +5,8 @@
             Smartibot devices now advertise on BLE as 'Smartibot abcd'
             nRF5x: Leave digital input disconnected for analog read (saves power)
             nRF5x: Return 'analog' as pin mode for any pin where input is disconnected
-            
+            ESP8266: replace os_sprintf with espruino_snprintf and flash space, freeHeap +192 byte
+                       
      2v03 : nRF5x: Fix issue when calling NRF.setAdvertising while connected via BLE (fix #1659)
             nRF5x: 'dump()' not outputs `NRF.setSecurity` line if it has been called.
             Ensure that converting a valid pin to a boolean always returns true
